1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p108-svc
spec:
  type: ClusterIP
  selector:
    app: p108
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
